// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders anchor button 1`] = `
<ForwardRef(forwardRef)
  anchor={true}
  classes={
    Object {
      "mouseHover": "Button-mouseHover",
      "root": "Button-root custom",
    }
  }
  href="/moderate"
  onClick={[Function]}
  target="_blank"
>
  <ForwardRef(forwardRef)
    alignItems="center"
  >
    <div
      className="Button-anchor"
    >
      link
    </div>
  </ForwardRef(forwardRef)>
  <div
    className="Button-iconAfter"
  >
    <ForwardRef(forwardRef)
      className="Button-iconOpenInNew"
    >
      open_in_new
    </ForwardRef(forwardRef)>
  </div>
</ForwardRef(forwardRef)>
`;

exports[`renders button 1`] = `
<ForwardRef(forwardRef)
  anchor={false}
  classes={
    Object {
      "mouseHover": "Button-mouseHover",
      "root": "Button-root custom Button-blankAdornment",
    }
  }
  onClick={[Function]}
>
  <ForwardRef(forwardRef)
    alignItems="center"
  >
    <div
      className=""
    >
      link
    </div>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
